tests/baselines/reference/unusedTypeParameters1.errors.txt
tests/cases/compiler/unusedTypeParameters1.ts(1,15): error TS6133: 'typeparameter1' is declared but never used.


==== tests/cases/compiler/unusedTypeParameters1.ts (1 errors) ====
    class greeter<typeparameter1> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: 'typeparameter1' is declared but never used.
    
    }